<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/popup"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/title_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:background="@drawable/popup"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_page_msg"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:textColor="@color/dark_grey"/>

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modif_notsaved_msg"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:textColor="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:background="@drawable/popup_button"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="1dp"/>

        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:background="@drawable/popup_button"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"/>
    </LinearLayout>
</LinearLayout>