<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginTop="5dp"
    tools:context=".view.AddTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_edittext_states"
                        android:ems="10"
                        android:hint="@string/placeholder_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/txtDescr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_edittext_states"
                        android:ems="10"
                        android:hint="@string/placeholder_description"
                        android:inputType="textMultiLine"
                        android:paddingLeft="10dp" />

                    <TextView
                        android:id="@+id/lblDeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="Deadline :" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/choose_date"
                            android:layout_width="34dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="110dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:hint="@string/choose_date"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/resetDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:text="@string/bin"
                            android:textSize="17sp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/lblEmergency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="Emergency :" />

                    <com.rtugeek.android.colorseekbar.ColorSeekBar
                        android:id="@+id/skbEmergency"
                        app:colorSeeds="@array/custom_colors"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        app:showAlphaBar="false"/>

                    <TextView
                        android:id="@+id/lblImportance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="Importance :" />

                    <com.rtugeek.android.colorseekbar.ColorSeekBar
                        android:id="@+id/skbImportance"
                        app:colorSeeds="@array/custom_colors"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        app:showAlphaBar="false"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="4"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button_states"
                    android:text="@string/cancel"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btnSaveUpdates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button_states"
                    android:text="@string/save_updates"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_states"
                    android:text="@string/delete"
                    android:textColor="#ffffff"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>